[package]
name = "lsp_on_demand"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
clap = { version = "3.1", features = ["derive", "env"] }
